# IU7-AA

./: .gitignore
hw/docs/: aa_hw-2.drawio  main.tex
hw/src/: main.lua
lab_01/: Cargo.toml
lab_01/benches/: my_benchmark.rs
lab_01/doc/: lev_cache.drawio  report.tex
lab_01/src/: distance.rs  main.rs
lab_02/: Cargo.toml
lab_02/benches/: my_benchmark.rs
lab_02/doc/: lab_02.drawio  main.tex
lab_02/src/: main.rs  matrix.rs
lab_02/tests/: tests.rs
lab_03/: Cargo.toml  test.py
lab_03/benches/: sort_benches.rs
lab_03/doc/: report.tex
lab_03/doc/img/: lab_03.drawio
lab_03/src/: main.rs  sorts.rs
lab_03/tests/: tests.rs
lab_04/: bench_and_plot.sh  benchmark.sh  meson.build  run.sh
lab_04/bench/: benchmark.cpp  meson.build
lab_04/docs/: lab_04.drawio  main.tex  style.tex
lab_04/scripts/: plot.py
lab_04/src/: main.cpp  matrix.cpp  matrix.h
lab_05/: meson.build  run.sh
lab_05/doc/: lab_05.drawio  main.tex  style.tex
lab_05/src/: computer.h  dns.cpp  dns.h  main.cpp  pretty_print.cpp  pretty_print.h  queue.h
lab_06/: .clang-format  format.sh  meson.build
lab_06/data/: 1.txt  2.txt  3.txt
lab_06/src/: ant.cpp  ant.h  colony.cpp  colony.h  default.cpp  default.h  main.cpp  matrix.h  matrix.hpp
lab_07/: tlconfig.lua
lab_07/data/: apps_202112111848.csv  cmps.csv  data1.csv  dump_test.csv  sorted.csv
lab_07/doc/: main.tex  search.drawio
lab_07/src/: benchmark.lua  cmp_count.lua  csv.lua  main.lua  search.lua  split.lua  test.lua  type.lua
